--- a/app/templates/common/upload.html
+++ b/app/templates/common/upload.html
@@ -1,17 +1,21 @@
 <div class="container-fluid">
-    <h3 class="text-center text-dark mb-1">Загрузка файла</h3>
+  <h3 class="text-center text-dark mb-1">Загрузка файла</h3>
 </div>
 <form method="post">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8">
-                <div class="mb-4">
-                    <div class="row">
-                        <div class="col-md-10"><input class="form-control" type="file" name="user_file"></div>
-                        <div class="col-md-2"><button class="btn btn-secondary border-0" type="submit" name="dept_choose" style="background: var(--bs-gray-dark);">Выбор</button></div>
-                    </div>
-                </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-10 col-xl-8">
+        <div class="mb-4">
+          <div class="row">
+            <div class="col-md-10">
+              <input class="form-control" type="file" name="user_file">
             </div>
+            <div class="col-md-2">
+              <button class="btn btn-secondary border-0" type="submit" name="upload" style="background: var(--bs-gray-dark);">Выбор</button>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </form>
