--- a/app/templates/load/load_report.html
+++ b/app/templates/load/load_report.html
@@ -1,31 +1,35 @@
+{% extends 'base.html' %}
+{% block content %}
 <div class="container-fluid">
-    <h3 class="text-center text-dark mb-1"><span style="color: rgb(33, 37, 41);">Отчет о нагрузке</span><br></h3>
+  <h3 class="text-center text-dark mb-1"><span style="color: rgb(33, 37, 41);">
+    {% block title %}Отчет о нагрузке{% endblock %}</span>
+  </h3>
 </div>
 <form method="post">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8">
-                <div class="mb-2"><label class="form-label text-dark">Кафедра</label><select class="form-select">
-                        <option value="12" selected="">This is item 1</option>
-                        <option value="13">This is item 2</option>
-                        <option value="14">This is item 3</option>
-                    </select></div>
-                <div class="row">
-                    <div class="col-md-3"><label class="form-label text-dark">Год</label><select class="form-select">
-                            <optgroup label="Выберите год:">
-                                <option value="13">This is item 2</option>
-                                <option value="14">This is item 3</option>
-                            </optgroup>
-                        </select></div>
-                    <div class="col-md-5"><label class="form-label text-dark">Месяц</label><select class="form-select">
-                            <optgroup label="Выберите месяц:">
-                                <option value="13">This is item 2</option>
-                                <option value="14">This is item 3</option>
-                            </optgroup>
-                        </select></div>
-                    <div class="col-md-4 col-md-4"><label class="form-label text-dark">Отчет</label><button class="btn btn-primary" id="load_report" type="submit" style="background: #008751;width: 100%;border-style: none;" name="load_report">Cформировать</button></div>
-                </div>
-            </div>
+  {{ form.hidden_tag() }}
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-10 col-xl-8">
+        <div class="mb-2">
+          {{ form.department.label(class="text-dark") }}
+          {{ form.department(class="form-select") }}
         </div>
+        <div class="row">
+          <div class="col-md-3">
+            {{ form.year.label(class="text-dark") }}
+            {{ form.year(class="form-select") }}
+          </div>
+          <div class="col-md-5">
+            {{ form.month.label(class="text-dark") }}
+            {{ form.month(class="form-select") }}
+          </div>
+          <div class="col-md-4 col-md-4">
+            <label class="text-dark" for="load_report">Отчет</label>
+            {{ form.load_report(class="btn btn-primary", type="submit", style="background: #008751;width: 100%;border-style: none;") }}
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </form>
+{% endblock %}
