--- a/app/templates/schedule/schedule.html
+++ b/app/templates/schedule/schedule.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container-fluid">
-  <h3 class="text-center text-dark mb-1">{% block title %}Расписание{% endblock %}</h3>
+  <h3 class="text-center text-dark mb-1">
+    {% block title %}Расписание{% endblock %}
+  </h3>
 </div>
 <form method="post">
   {{ form.hidden_tag() }}
