--- a/app/templates/common/choose_plan.html
+++ b/app/templates/common/choose_plan.html
@@ -8,7 +8,7 @@
           {{ form.edu_spec(class="form-select") }}
         </div>
         <div class="mb-4">
-          {{ form.spec_choose(class="btn btn-secondary border-0", type="submit") }}
+          {{ form.spec_choose(class="btn btn-secondary border-0") }}
         </div>
         {% if edu_spec %}
           <div class="mb-2">
@@ -16,7 +16,7 @@
             {{ form.edu_plan(class="form-select") }}
           </div>
           <div class="mb-4">
-            {{ form.plan_choose(class="btn btn-secondary border-0", type="submit") }}
+            {{ form.plan_choose(class="btn btn-secondary border-0") }}
           </div>
         {% endif %}
       </div>
