--- a/app/templates/load/load_report.html
+++ b/app/templates/load/load_report.html
@@ -25,7 +25,7 @@
           </div>
           <div class="col-md-4 col-md-4">
             <label class="text-dark" for="load_report">Отчет</label>
-            {{ form.load_report(class="btn btn-primary", type="submit", style="background: #008751;width: 100%;border-style: none;") }}
+            {{ form.load_report(class="btn btn-primary", style="background: #008751;width: 100%;border-style: none;") }}
           </div>
         </div>
       </div>
