--- a/app/templates/programs/wp_data.html
+++ b/app/templates/programs/wp_data.html
@@ -15,10 +15,16 @@
                         <div class="card-body">
                             <div class="row align-items-center no-gutters">
                                 <div class="col me-2">
-                                    <div class="text-uppercase text-success fw-bold text-xs mb-1" id="status_label"><span>Статус</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span id="status">Утвержден</span></div>
+                                    <div class="text-uppercase text-success fw-bold text-xs mb-1" id="status_label">
+                                      <span>Статус</span>
+                                    </div>
+                                    <div class="text-dark fw-bold h5 mb-0">
+                                      <span id="status">Утвержден</span>
+                                    </div>
                                 </div>
-                                <div class="col-auto"><i class="fas fa-clipboard-check fa-2x text-gray-300"></i></div>
+                                <div class="col-auto">
+                                  <i class="fas fa-clipboard-check fa-2x text-gray-300"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -28,10 +34,16 @@
                         <div class="card-body">
                             <div class="row align-items-center no-gutters">
                                 <div class="col me-2">
-                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1"><span id="generation_label">Поколение</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span id="generation">3++</span></div>
+                                    <div class="text-uppercase text-primary fw-bold text-xs mb-1">
+                                      <span id="generation_label">Поколение</span>
+                                    </div>
+                                    <div class="text-dark fw-bold h5 mb-0">
+                                      <span id="generation">3++</span>
+                                    </div>
                                 </div>
-                                <div class="col-auto"><i class="fas fa-user-graduate fa-2x text-gray-300"></i></div>
+                                <div class="col-auto">
+                                  <i class="fas fa-user-graduate fa-2x text-gray-300"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -43,14 +55,20 @@
                         <div class="card-body">
                             <div class="row align-items-center no-gutters">
                                 <div class="col me-2">
-                                    <div class="text-uppercase text-info fw-bold text-xs mb-1"><span id="disciplines_number_label">Количество дисциплин</span></div>
+                                    <div class="text-uppercase text-info fw-bold text-xs mb-1">
+                                      <span id="disciplines_number_label">Количество дисциплин</span>
+                                    </div>
                                     <div class="row g-0 align-items-center">
                                         <div class="col-auto">
-                                            <div class="text-dark fw-bold h5 mb-0"><span id="disciplines_number">18</span></div>
+                                            <div class="text-dark fw-bold h5 mb-0">
+                                              <span id="disciplines_number">18</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-auto"><i class="far fa-clipboard fa-2x text-gray-300"></i></div>
+                                <div class="col-auto">
+                                  <i class="far fa-clipboard fa-2x text-gray-300"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -60,10 +78,16 @@
                         <div class="card-body">
                             <div class="row align-items-center no-gutters">
                                 <div class="col me-2">
-                                    <div class="text-uppercase text-warning fw-bold text-xs mb-1"><span id="programs_number_label">Количество программ</span></div>
-                                    <div class="text-dark fw-bold h5 mb-0"><span id="programs_number">18</span></div>
+                                    <div class="text-uppercase text-warning fw-bold text-xs mb-1">
+                                      <span id="programs_number_label">Количество программ</span>
+                                    </div>
+                                    <div class="text-dark fw-bold h5 mb-0">
+                                      <span id="programs_number">18</span>
+                                    </div>
                                 </div>
-                                <div class="col-auto"><i class="fas fa-clipboard-list fa-2x text-gray-300"></i></div>
+                                <div class="col-auto">
+                                  <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -72,10 +96,12 @@
             <div class="row">
                 <div class="col">
                     <div class="alert alert-primary text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-                        <h6 class="alert-heading fw-bold text-center" id="duplicates_label">В плане есть дубликаты рабочих программ:</h6><span id="duplicates">Б.1.В.7 Учения<br></span>
+                        <h6 class="alert-heading fw-bold text-center" id="duplicates_label">В плане есть дубликаты рабочих программ:</h6>
+                      <span id="duplicates">Б.1.В.7 Учения<br></span>
                     </div>
                     <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
-                        <h6 class="alert-heading fw-bold text-center" id="wrong_name_label">Название дисциплины плана не соответствует названию программы:</h6><span id="wrong_name">План - "Организация раскрытия и расследования преступлений отдельных видов"<br>Программа - "Организация раскрытия и расследования преступлений отдельных видов "<br>План - "Автомобильная подготовка"<br>Программа - "Автомобильная подготовка "<br></span>
+                        <h6 class="alert-heading fw-bold text-center" id="wrong_name_label">Название дисциплины плана не соответствует названию программы:</h6>
+                      <span id="wrong_name">План - "Организация раскрытия и расследования преступлений отдельных видов"<br>Программа - "Организация раскрытия и расследования преступлений отдельных видов "<br>План - "Автомобильная подготовка"<br>Программа - "Автомобильная подготовка "<br></span>
                     </div>
                 </div>
             </div>
@@ -155,7 +181,11 @@
 <form method="post">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8 mb-2"><button class="btn btn-warning mb-3" id="create_wp" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="create_wp">Создать отсутствующие программы</button><button class="btn btn-secondary mb-3" id="wp_status_0" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="wp_status_0">Разутвердить все программы плана</button><button class="btn btn-success link-light mb-3" id="wp_status_1" type="submit" style="background: #008751;width: 100%;font-weight: bold;border-style: none;" name="wp_status_1">Утвердить все программы плана</button></div>
+            <div class="col-md-10 col-xl-8 mb-2">
+              <button class="btn btn-warning mb-3" id="create_wp" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="create_wp">Создать отсутствующие программы</button>
+              <button class="btn btn-secondary mb-3" id="wp_status_0" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="wp_status_0">Разутвердить все программы плана</button>
+              <button class="btn btn-success link-light mb-3" id="wp_status_1" type="submit" style="background: #008751;width: 100%;font-weight: bold;border-style: none;" name="wp_status_1">Утвердить все программы плана</button>
+            </div>
         </div>
     </div>
 </form>
