--- a/app/templates/programs/wp_dates_update.html
+++ b/app/templates/programs/wp_dates_update.html
@@ -6,7 +6,9 @@
         <div class="row justify-content-center">
             <div class="col-md-10 col-xl-8">
                 <div class="row mb-2">
-                    <div class="col-md-12"><label class="form-label text-dark" id="edu_spec" name="edu_spec">Специальность:</label><select class="form-select" id="edu_spec" name="edu_spec">
+                    <div class="col-md-12">
+                      <label class="form-label text-dark" id="edu_spec" name="edu_spec">Специальность:</label>
+                      <select class="form-select" id="edu_spec" name="edu_spec">
                             <optgroup label="Выберите месяц:">
                                 <option value="13">This is item 2</option>
                                 <option value="14">This is item 3</option>
@@ -14,32 +16,54 @@
                         </select></div>
                 </div>
                 <div class="row mb-2">
-                    <div class="col"><button class="btn btn-secondary mb-1 mt-1" id="spec_choose" type="submit" name="spec_choose">Выбор</button></div>
+                    <div class="col">
+                      <button class="btn btn-secondary mb-1 mt-1" id="spec_choose" type="submit" name="spec_choose">Выбор</button>
+                    </div>
                 </div>
                 <div class="row mb-4">
-                    <div class="col"><label class="form-label text-dark" id="edu_plan" name="">План:</label><select class="form-select" id="edu_plan" name="edu_plan">
+                    <div class="col">
+                      <label class="form-label text-dark" id="edu_plan" name="">План:</label>
+                      <select class="form-select" id="edu_plan" name="edu_plan">
                             <optgroup label="Выберите год:">
                                 <option value="13">This is item 2</option>
                                 <option value="14">This is item 3</option>
                             </optgroup>
-                        </select></div>
+                        </select>
+                    </div>
                 </div>
                 <div class="row mb-2">
-                    <div class="col-md-6"><label class="form-label text-dark" id="date_methodical_label" name="date_methodical_label">Дата методического совета<br></label><input class="form-control" id="date_methodical" name="date_methodical" type="date"></div>
-                    <div class="col-md-6"><label class="form-label text-dark" id="date_academic_label" name="date_academic_label">Дата Ученого совета<br></label><input class="form-control" id="date_academic" name="date_academic" type="date"></div>
+                    <div class="col-md-6">
+                      <label class="form-label text-dark" id="date_methodical_label" name="date_methodical_label">Дата методического совета<br></label>
+                      <input class="form-control" id="date_methodical" name="date_methodical" type="date">
+                    </div>
+                    <div class="col-md-6">
+                      <label class="form-label text-dark" id="date_academic_label" name="date_academic_label">Дата Ученого совета<br></label>
+                      <input class="form-control" id="date_academic" name="date_academic" type="date">
+                    </div>
                 </div>
                 <div class="row mb-2">
-                    <div class="col-md-6"><label class="form-label text-dark" id="document_methodical_label" name="document_methodical_label">Номер протокола метод. совета<br></label><input class="form-control" type="number" id="document_methodical" name="document_methodical" placeholder="1"></div>
-                    <div class="col-md-6"><label class="form-label text-dark" id="document_academic_label" name="document_academic_label">Номер протокола&nbsp; ученого совета<br></label><input class="form-control" type="number" id="document_academic" name="document_academic" placeholder="1"></div>
+                    <div class="col-md-6">
+                      <label class="form-label text-dark" id="document_methodical_label" name="document_methodical_label">Номер протокола метод. совета<br></label>
+                      <input class="form-control" type="number" id="document_methodical" name="document_methodical" placeholder="1">
+                    </div>
+                    <div class="col-md-6">
+                      <label class="form-label text-dark" id="document_academic_label" name="document_academic_label">Номер протокола&nbsp; ученого совета<br></label>
+                      <input class="form-control" type="number" id="document_academic" name="document_academic" placeholder="1">
+                    </div>
                 </div>
                 <div class="row mb-2">
                     <div class="col-md-3"></div>
-                    <div class="col-md-6"><label class="form-label text-dark" id="date_approval_label" name="date_approval_label">Дата утверждения<br></label><input class="form-control" id="date_approval" name="date_approval" type="date"></div>
+                    <div class="col-md-6">
+                      <label class="form-label text-dark" id="date_approval_label" name="date_approval_label">Дата утверждения<br></label>
+                      <input class="form-control" id="date_approval" name="date_approval" type="date">
+                    </div>
                     <div class="col-md-3"></div>
                 </div>
                 <div class="row mb-2">
                     <div class="col-md-3"></div>
-                    <div class="col-md-6 mt-3"><button class="btn btn-success fw-normal link-light" id="wp_dates_update" type="button" style="background: #008751;font-weight: bold;border-style: none;width: 100%;" name="wp_dates_update">Обновить данные</button></div>
+                    <div class="col-md-6 mt-3">
+                      <button class="btn btn-success fw-normal link-light" id="wp_dates_update" type="button" style="background: #008751;font-weight: bold;border-style: none;width: 100%;" name="wp_dates_update">Обновить данные</button>
+                    </div>
                     <div class="col-md-3"></div>
                 </div>
             </div>
