--- a/app/templates/programs/wp_dept_check.html
+++ b/app/templates/programs/wp_dept_check.html
@@ -49,7 +49,7 @@
                                     <table class="table">
                                         <thead class="text-danger">
                                             <tr>
-                                                <th><span style="white-space: pre-line">Б.1.О.16 Административное право</span><a class="btn btn-light btn-sm border rounded mx-1" role="button" target="_blank" href="{{ url_for('programs.wp_field_edit') }}?disc_id={{ wp_data[plan][wp][1] }}&amp;parameter={{ wp_field }}">EDIT</a></th>
+                                                <th><span style="white-space: pre-line">Б.1.О.16 Административное право</span><a class="btn btn-light btn-sm border rounded mx-1" role="button" target="_blank" href="{{ url_for('programs.wp_field_edit') }}?wp_id={{ wp }}&parameter={{ wp_field }}">EDIT</a></th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -63,7 +63,7 @@
                                     <table class="table">
                                         <thead class="text-danger">
                                             <tr>
-                                                <th><span style="white-space: pre-line">Б.1.О.33 Государственная служба в органах внутренних дел</span><a class="btn btn-light btn-sm border rounded mx-1" role="button" href="{{ url_for('programs.wp_field_edit') }}?disc_id={{ wp_data[plan][wp][1] }}&amp;parameter={{ wp_field }}" target="_blank">EDIT</a></th>
+                                                <th><span style="white-space: pre-line">Б.1.О.33 Государственная служба в органах внутренних дел</span><a class="btn btn-light btn-sm border rounded mx-1" role="button" href="{{ url_for('programs.wp_field_edit') }}?wp_id={{ wp }}&parameter={{ wp_field }}" target="_blank">EDIT</a></th>
                                             </tr>
                                         </thead>
                                         <tbody>
