--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -21,21 +21,21 @@
             <form class="text-center" method="post">
               {{ form.hidden_tag() }}
               <div class="form-floating mb-3">
-                {{ form.username(class="form-control", type="text", placeholder=form.username.data) }}
+                {{ form.username(class="form-control", placeholder=form.username.data) }}
                 {{ form.username.label }}
                 {% for error in form.username.errors %}
                   <span style="color: var(--bs-danger);">{{ error }}</span>
                 {% endfor %}
               </div>
               <div class="form-floating mb-3">
-                {{ form.password(class="form-control", type="text", placeholder=form.password.data) }}
+                {{ form.password(class="form-control", placeholder=form.password.data) }}
                 {{ form.password.label }}
                 {% for error in form.password.errors %}
                   <span style="color: var(--bs-danger);">{{ error }}</span>
                 {% endfor %}
               </div>
               <div class="form-floating mb-3">
-                {{ form.password2(class="form-control", type="text", placeholder=form.password2.data) }}
+                {{ form.password2(class="form-control", placeholder=form.password2.data) }}
                 {{ form.password2.label }}
                 {% for error in form.password2.errors %}
                   <span style="color: var(--bs-danger);">{{ error }}</span>
@@ -49,7 +49,7 @@
                 {% endfor %}
               </div>
               <div class="mb-3">
-                {{ form.submit(class="btn btn-primary d-block w-100", type="submit") }}
+                {{ form.submit(class="btn btn-primary d-block w-100") }}
               </div>
               {% if message %}
                 <span id="message" class="text-success" style="color: var(--bs-success);">{{ message }}</span>
