--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -19,7 +18,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/fontawesome-all.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Features-Cards.css') }}">
   </head>
-
   <body id="page-top">
     <div id="wrapper">
       <!-- Меню -->
@@ -145,10 +143,10 @@
               </ul>
             </div>
           </nav>
-
+          <!-- Основная часть -->
           {% block content %}
           {% endblock %}
-
+          <!-- Flash сообщения -->
           <div class="container">
             {% with messages = get_flashed_messages() %}
               {% if messages %}
@@ -176,5 +174,4 @@
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
   </body>
-
 </html>
