--- a/app/templates/plans/plans_matrix_indicator_load.html
+++ b/app/templates/plans/plans_matrix_indicator_load.html
@@ -1,17 +1,22 @@
 <div class="container-fluid">
-    <h3 class="text-center text-dark mb-1">Матрица компетенций (простая)<br></h3>
+    <h3 class="text-center text-dark mb-1">Матрица компетенций (с индикаторами)<br></h3>
 </div>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col">
-            <h5 class="fw-normal text-center text-primary mb-3">40.05.01 Правовое обеспечение национальной безопасности<br></h5>
+            <h5 class="fw-normal text-center text-primary mt-2 mb-2">40.05.01 Правовое обеспечение национальной безопаcности&nbsp;<br></h5>
         </div>
     </div>
     <div class="row justify-content-center mb-3">
         <div class="col-md-10 col-xl-8">
-            <div class="alert alert-success text-center py-1 mb-1" role="alert" style="opacity: 0.80;"><span class="text-center">Текущий план не содержит связей<br></span></div>
-            <div class="alert alert-success text-center py-1 mb-1" role="alert" style="opacity: 0.80;"><span>План содержит связи дисциплин и компетенций (перед загрузкой их необходимо очистить)<br></span></div>
-            <div><a class="btn btn-light btn-sm border rounded-pill shadow-sm" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">Показать связи</a>
+            <div class="alert alert-info text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+              <span class="text-center">Текущий план не содержит связей<br></span>
+            </div>
+            <div class="alert alert-info text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+              <span>План содержит связи дисциплин и компетенций (перед загрузкой их необходимо очистить)<br></span>
+            </div>
+            <div>
+              <a class="btn btn-light btn-sm border rounded-pill shadow-sm" data-bs-toggle="collapse" aria-expanded="false" aria-controls="collapse-1" href="#collapse-1" role="button">Показать связи</a>
                 <div class="collapse" id="collapse-1">
                     <p class="fw-bold text-dark" style="margin-bottom: 0;">Б.1.Б.1 Иностранный язык<br></p>
                     <p class="text-dark" style="white-space: pre-line">ОК-1 - способностью понимать и анализировать мировоззренческие, социально и личностно значимые философские проблемы</p>
@@ -25,8 +30,15 @@
         <div class="row justify-content-center">
             <div class="col-md-10 col-xl-8">
                 <div class="row" style="text-align: center;">
-                    <div class="col-md-6"><button class="btn btn-primary" id="mtrx_download" type="submit" style="width: 100%;font-weight: bold;border-style: none;border-color: var(--bs-dark);" name="mtrx_download">Сформировать матрицу</button><small class="form-text" style="text-align: center;">(скачать текущую матрицу в формате Excel)</small></div>
-                    <div class="col-md-6 col-md-4"><button class="btn btn-danger" id="mtrx_delete" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="mtrx_delete">Полная очистка</button><small class="form-text">(удаление связей дисциплин и компетенций, и их содержимого из программ)</small></div>
+                    <div class="col-md-6"><button class="btn btn-warning" id="mtrx_ind_temp" type="submit" style="width: 100%;font-weight: bold;border-style: none;border-color: var(--bs-dark);" name="mtrx_ind_temp">Образец файла</button><small class="form-text" style="text-align: center;">(образец файла для загрузки из GoogleDocs)</small></div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-10 col-xl-8">
+                <div class="row" style="text-align: center;">
+                    <div class="col-md-6"><button class="btn btn-primary" id="mtrx_download-1" type="submit" style="width: 100%;font-weight: bold;border-style: none;border-color: var(--bs-dark);" name="mtrx_download">Сформировать матрицу</button><small class="form-text" style="text-align: center;">(скачать текущую матрицу в формате Excel)</small></div>
+                    <div class="col-md-6 col-md-4"><button class="btn btn-danger" id="mtrx_delete-1" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="mtrx_delete">Полная очистка</button><small class="form-text">(удаление связей дисциплин и компетенций, и их содержимого из программ)</small></div>
                 </div>
             </div>
         </div>
@@ -34,8 +46,11 @@
             <div class="col-md-10 col-xl-8 mb-3"><label class="form-label" style="color: var(--bs-dark);">Выберите файл Excel для загрузки<br></label><input class="form-control" type="file" id="formFile" style="border-color: var(--bs-gray-400);" name="file"></div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-10 col-xl-8 mb-3"><button class="btn btn-secondary" id="mtrx_sim_check" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="mtrx_sim_check">Проверка файла</button></div>
+            <div class="col-md-10 col-xl-8 mb-2"><button class="btn btn-secondary" id="mtrx_ind_check" type="submit" style="width: 100%;font-weight: bold;border-style: none;" name="mtrx_ind_check">Проверка файла</button></div>
             <div class="col-md-10 col-xl-8">
+                <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
+                    <h6 class="alert-heading fw-bold text-center">Индикаторы файла, которые не удалось прочитать (необходимо исправить):</h6><span>ОК-1.з.1<br></span>
+                </div>
                 <div class="alert alert-danger text-center py-1 mb-1" role="alert" style="opacity: 0.80;">
                     <h6 class="alert-heading fw-bold text-center">Коды компетенций файла, которые не найдены в плане</h6><span>УК-1, УК-2, УК-3<br></span>
                 </div>
@@ -83,7 +98,10 @@
             </div>
         </div>
         <div class="row justify-content-center mb-2">
-            <div class="col-md-10 col-xl-8 mb-3"><button class="btn btn-success link-light" type="submit" style="background: #008751;width: 100%;font-weight: bold;border-style: none;" name="comp_load" id="mtrx_sim_load">Загрузка компетенций</button></div>
+            <div class="col-md-10 col-xl-8 mt-3 mb-3">
+                <div class="form-check form-switch"><input class="form-check-input" type="checkbox" id="flexSwitchRelations" checked="" name="switch_relations"><label class="form-check-label" for="flexSwitchRelations">Загружать связи</label></div>
+                <div class="form-check form-switch"><input class="form-check-input" type="checkbox" id="flexSwitchPrograms" checked="" name="switch_programs"><label class="form-check-label" for="flexSwitchPrograms">Загружать индикаторы в программы</label></div><button class="btn btn-success link-light mt-2" id="mtrx_ind_load" type="submit" style="background: #008751;width: 100%;font-weight: bold;border-style: none;" name="mtrx_ind_load">Загрузка компетенций</button>
+            </div>
         </div>
     </div>
 </form>
