--- a/app/templates/programs/wp_field_edit.html
+++ b/app/templates/programs/wp_field_edit.html
@@ -7,15 +7,19 @@
             <div class="col-md-10 col-xl-8">
                 <h4 class="fw-lighter text-center text-primary mt-2 mb-2">Административное право {{ wp_name }}<br></h4>
                 <div class="row mb-2">
-                    <div class="col"><label class="form-label text-dark" id="fields_data_label" name="fields_data_label">Поле рабочей программы:</label><select class="form-select" id="fields_data" name="fields_data">
+                    <div class="col"><label class="form-label text-dark" id="fields_data_label" name="fields_data_label">Поле рабочей программы:</label>
+                      <select class="form-select" id="fields_data" name="fields_data">
                             <optgroup label="Выберите год:">
                                 <option value="13">This is item 2</option>
                                 <option value="14">This is item 3</option>
                             </optgroup>
-                        </select></div>
+                        </select>
+                    </div>
                 </div>
                 <div class="row mb-2">
-                    <div class="col"><button class="btn btn-secondary mb-1 mt-1" id="fields_data" type="button" name="fields_data">Выбрать</button></div>
+                    <div class="col">
+                      <button class="btn btn-secondary mb-1 mt-1" id="fields_data" type="button" name="fields_data">Выбрать</button>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -23,12 +27,16 @@
                             <div class="card-header py-3">
                                 <p class="text-center text-primary m-0 fw-bold" id="wp_field_edit_label" name="wp_field_edit_label">{{ form.wp_field_edit.label }}<br></p>
                             </div>
-                            <div class="card-body"><textarea class="form-control" id="wp_field_edit" rows="8" name="wp_field_edit"></textarea></div>
+                            <div class="card-body">
+                              <textarea class="form-control" id="wp_field_edit" rows="8" name="wp_field_edit"></textarea>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col mb-3"><button class="btn btn-info link-light" id="field_update" type="button" style="width: 100%;font-weight: bold;border-style: none;" name="field_update">Обновить</button></div>
+                    <div class="col mb-3">
+                      <button class="btn btn-info link-light" id="field_update" type="button" style="width: 100%;font-weight: bold;border-style: none;" name="field_update">Обновить</button>
+                    </div>
                 </div>
             </div>
         </div>
